--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "match-media-screen": "^0.0.1"
   }
 }
