--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
+    "@viivue/atomic-css": "^1.1.4",
     "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
